tests/machine/x/c/pure_global_fold.error
line: 8
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/pure_global_fold.c: In function ‘inc’:
/workspace/mochi/tests/machine/x/c/pure_global_fold.c:8:13: error: ‘k’ undeclared (first use in this function)
    8 | return (x + k);
      |             ^
/workspace/mochi/tests/machine/x/c/pure_global_fold.c:8:13: note: each undeclared identifier is reported only once for each function it appears in

   6: 
