tests/machine/x/c/pure_global_fold.c
// Generated by Mochi experimental C compiler
#include <stdio.h>
#include <stdbool.h>
#include <stdlib.h>
#include <string.h>

int inc(int x) {
return (x + k);
}


int main() {
int k = 2;
printf("%d\n", inc(3));
    return 0;
}
